# weathery-rs

./: Cargo.toml
src/: main.rs  smhi.rs
www/: index.html
