[package]
name = "weathery-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { features = ["websocket", "static-files"]}
tokio = { version = "^1.10.0", features = ["rt-multi-thread", "macros"] }
futures-util = "^0.3.16"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
serde = "^1.0.127"
serde_json = "^1.0.66"
rusqlite = { version = "0.28.0", features = ["bundled"] }
reqwest = "0.11.12"